Tue Jul 13 14:14:47 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/VC10ProjectCreator.pm:
        * templates/vc10dll.mpt:
        * templates/vc10exe.mpt:
        * templates/vc10lib.mpt:
        * templates/vc10libexe.mpt:
        * templates/vc10platforms.mpt:
          Added more support for msvc10, thanks to Max Zhou
          <earthdog at 126.com>

Tue Jul 13 11:33:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/VC10ProjectCreator.pm:
          Updated for msvc10, thanks to Max Zhou <earthdog at 126.com>

Tue Jul 13 11:20:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * templates/vc10.mpd:
        * templates/vc10filters.mpd:
          New files for vc10

Tue Jul 13 11:12:49 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * modules/TemplateParser.pm:
        * modules/VC10ProjectCreator.pm:

        * templates/vc10.mpd:
        * templates/vc10dll.mpt:
        * templates/vc10exe.mpt:
        * templates/vc10filters.mpd:
        * templates/vc10lib.mpt:
        * templates/vc10libexe.mpt:

Fri Jul  9 21:16:23 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/CDT6WorkspaceCreator.pm:
        * modules/WB26WorkspaceCreator.pm:

          Account for the -into directory when listing the full path to
          the project file inside the workspace file.

Tue Jun 29 18:18:56 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * modules/TemplateParser.pm: split_parameters() was returning an
        empty parameter.  This should fix errant extra whitespace
        generated in bmake test output.

Tue Jun 29 14:45:21 UTC 2010  Chris Cleeland  <cleeland@ociweb.com>

        * templates/cdt6platforms.mpt:
        * templates/cdt6dll.mpt:
        * templates/cdt6lib.mpt:
        * templates/cdt6exe.mpt:

          Added missing dollar-Id-dollar to correct fuzz errors.

Tue Jun 29 13:41:39 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * devtools/document_template.pl:
