@@ -79,6 +79,7 @@ my %keywords = ('if'              => 0,
                 'end_aux_file'    => 0,
                 'translate_vars'  => 2 | 1,
                 'convert_slashes' => 2,
+				'new_guid'        => 0,
                );
 
 my %target_type_vars = ('type_is_static'   => 1,
@@ -1825,6 +1826,15 @@ sub perform_convert_slashes {
       ? $arg->[1] : $self->{'prjc'}->{'command_subs'}->{'os'};
   $val =~ s!/!\\!g if $os eq 'win32';
   return $val;
+}
+
+
+sub handle_new_guid {
+  my($self, $name) = @_;
+  my $val = $self->get_value_with_default($name);
+  my $prjc = $self->{'prjc'};
+  my $guid = GUID::generate($val ? $val : $name, $prjc->{'current_input'}, $prjc->getcwd());
+  $self->append_current($guid);
 }
 
 
